#004 - contact form add styles

--- a/src/app/modules/contact-form/contact-form.component.html
+++ b/src/app/modules/contact-form/contact-form.component.html
@@ -1,5 +1,4 @@
-<p>contact-form works!</p>
-<form [formGroup]="contactForm">
+<form [formGroup]="contactForm" class="form-container">
     <label>
         <span>
             First Name:
@@ -36,6 +35,6 @@
     </label>
 
     <button (click)="onSave()">
-    Save
+        Save Contact
     </button>
 </form>
