#005 - add ngrx/store, create app store

--- a/src/app/modules/contact-list/contact-list.component.html
+++ b/src/app/modules/contact-list/contact-list.component.html
@@ -8,8 +8,8 @@
         </span>
     </div>
     <div class="list-content-container">
-        <div *ngFor="let item of data">
-            {{item.FirstName}}, {{item.LastName}}
+        <div *ngFor="let item of contacts$ | async">
+            {{item.firstName}}, {{item.lastName}}
         </div>
 
     </div>
