--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <router-outlet></router-outlet>
-
 <app-contact-form></app-contact-form>
-<app-contact-list [contacts$]="contacts$"></app-contact-list>
+
+<app-contact-list></app-contact-list>
