#007 add contact details component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <router-outlet></router-outlet>
 <app-contact-form></app-contact-form>
 
+<app-contact-details></app-contact-details>
+
 <app-contact-list></app-contact-list>
