--- a/src/app/modules/contact-form/contact-form.component.html
+++ b/src/app/modules/contact-form/contact-form.component.html
@@ -22,7 +22,7 @@
 
     <label>
         <span>
-            Eamil:
+            Email:
         </span>
         <input type="text" formControlName="email">
     </label>
