#012 - add styles, change ui

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<router-outlet></router-outlet>
-<app-contact-form></app-contact-form>
-
-<app-contact-details></app-contact-details>
-
-<app-contact-list></app-contact-list>
+<div class="app-container">
+    <app-contact-form class="feature-container"></app-contact-form>
+    <app-contact-list class="feature-container"></app-contact-list>
+    <app-contact-details class="feature-container"></app-contact-details>
+</div>
