--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,36 @@
 * {
     box-sizing: border-box;
 }
+
+body {
+    margin: 0;
+}
+
+.app-container{
+    padding: 0;
+    display: flex;
+    justify-content: space-around;
+    height: 100%;
+    width: 100%;
+    font-size: 18px;
+    
+    app-contact-list{
+        width: 50%;
+    }
+
+    app-contact-details {
+        width: 20%;
+    }
+
+    app-contact-form {
+        width: 20%;
+    }
+}
+
+.feature-container{
+    border: 1px solid black;
+    border-radius: 3px;
+    background-color: #f5f3f0;
+    box-shadow: 2px 2px 2px grey;
+}
+
