--- a/src/app/modules/contact-form/contact-form.component.scss
+++ b/src/app/modules/contact-form/contact-form.component.scss
@@ -7,7 +7,7 @@
 
     label {
         display: block;
-        width: 100%;
+        width: 90%;
         height: 50px;
         padding: 10px 10px;
 
@@ -16,13 +16,14 @@
             border: 1px solid black;
             border-radius: 3px;
             height: 20px;
-            width: 97%;
+            width: 100%;
         }
     }
 
     button {
         width: 50%;
         margin: 0 auto;
+        margin-top: 5px;
         padding: 10px 10px;
     }
 }
