#012 - fix form/list tests, change detection

--- a/src/app/modules/contact-form/contact-form.component.html
+++ b/src/app/modules/contact-form/contact-form.component.html
@@ -34,7 +34,7 @@
         <input type="text" formControlName="address">
     </label>
 
-    <button (click)="onSave()">
+    <button (click)="onSubmit()">
         Add Contact
     </button>
 </form>
