#013 - add tests, cleanup

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,6 +13,7 @@ body {
     height: 100%;
     width: 100%;
     font-size: 18px;
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     
     app-contact-list{
         width: 50%;
